Use doc-base from php organization
Patch by rlenferink.

Closes php/doc-en#113.

git-svn-id: https://svn.php.net/repository/phpdoc/en/trunk@349984 c90b9560-bf6c-de11-be94-00142212c4b1

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ php:
 before_script:
   - mv `pwd` ../en
   - cd ..
-  - git clone --depth=1 git://github.com/salathe/phpdoc-base.git doc-base
+  - git clone --depth=1 git://github.com/php/doc-base.git doc-base
 script:
   - php doc-base/configure.php --enable-xml-details --disable-libxml-check --redirect-stderr-to-stdout --with-lang=en
 
